--- a/portfolio.html
+++ b/portfolio.html
@@ -214,30 +214,30 @@
                     <div class="footer-social-icon">
                         <h3 class="footer-title title">присоединяйтесь</h3>
                         <ul class="footer-list-icon list">
-                            <li class="social-item footer-social">
-                                <a href="" class="social-link footer-link link">
-                                    <svg class="social-icon footer-icon">
+                            <li class="social-list_item">
+                                <a href="" class="social-list_link footer-link link">
+                                    <svg class="social-list_icon footer-icon">
                                         <use href="./images/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="social-item footer-social">
-                                <a href="" class="social-link footer-link link">
-                                    <svg class="social-icon footer-icon">
+                            <li class="social-list_item">
+                                <a href="" class="social-list_link footer-link link">
+                                    <svg class="social-list_icon footer-icon">
                                         <use href="./images/sprite.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="social-item footer-social">
-                                <a href="" class="social-link footer-link link">
-                                    <svg class="social-icon footer-icon">
+                            <li class="social-list_item">
+                                <a href="" class="social-list_link footer-link link">
+                                    <svg class="social-list_icon footer-icon">
                                         <use href="./images/sprite.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="social-item footer-social">
-                                <a href="" class="social-link footer-link link">
-                                    <svg class="social-icon footer-icon">
+                            <li class="social-list_item">
+                                <a href="" class="social-list_link footer-link link">
+                                    <svg class="social-list_icon footer-icon">
                                         <use href="./images/sprite.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -247,7 +247,7 @@
                     <div class="footer-subscribr">
                         <h3 class="footer-title title">Подпишитесь на рассылку</h3>
                         <form action="#" class="onlain-subscribr">
-                            <input type="text" name="mailto" placeholder="E-mail" class="mail-input footer-input">
+                            <input type="email" name="user-email" placeholder="E-mail" class="mail-input footer-input">
                             <button type="button" class="footer-button button">Подписаться<svg class="footer-mail-icon">
                                     <use href="./images/icons.svg#icon-icon-send"></use>
                                 </svg></button>
