--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <header class="header-nav">
             <div class="container header-container">
                 <nav class="container-nav">
-                    <a href="" class="logo logo-item">Web<span class="studio">Studio</span></a>
+                    <a href="" class="logo logo-header">Web<span class="header-studio">Studio</span></a>
                     <ul class="site-nav list">
                         <li class="header-item"><a href="./index.html" class="link header-link">Студия</a></li>
                         <li class="header-item"><a href="./portfolio.html" class="link header-link current">Портфолио</a></li>
@@ -46,18 +46,18 @@
             </div>
         </header>
     <main>
-        <section class=" section section-main">
+        <section class=" section section-portfolio">
             <div class="container">
                 <h1 class="visually-hidden">Портфолио</h1>
-                <ul class="section-main-buttons list">
-                    <li><button type="button" class="buttons">Все</button></li>
-                    <li><button type="button" class="buttons">Веб-сайты</button></li>
-                    <li><button type="button" class="buttons">Приложения</button></li>
-                    <li><button type="button" class="buttons">Дизайн</button></li>
-                    <li><button type="button" class="buttons">Маркетинг</button></li>
+                <ul class="section-portfolio-buttons list">
+                    <li><button type="button" class="buttons-portfolio">Все</button></li>
+                    <li><button type="button" class="buttons-portfolio">Веб-сайты</button></li>
+                    <li><button type="button" class="buttons-portfolio">Приложения</button></li>
+                    <li><button type="button" class="buttons-portfolio">Дизайн</button></li>
+                    <li><button type="button" class="buttons-portfolio">Маркетинг</button></li>
                 </ul>
-                <ul class="section-pictures list">
-                    <li class="item-pictures">
+                <ul class="section-portfolio-pictures list">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-01.png" alt="Ноутбук" width="370">
@@ -72,7 +72,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-02.png" alt="Два баскетболиста" width="370">
@@ -87,7 +87,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-03.png" alt="Логотип на фоне рыбы" width="370">
@@ -102,7 +102,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-04.png" alt="Наушники" width="370">
@@ -117,7 +117,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-05.png" alt="Две коробки" width="370">
@@ -132,7 +132,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-06.png" alt="Монитор ПК" width="370">
@@ -147,7 +147,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-07.png" alt="Раскрытая книга" width="370">
@@ -162,7 +162,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-08.png" alt="Бирка" width="370">
@@ -177,7 +177,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item-pictures">
+                    <li class="portfolio-item-pictures">
                         <a href="" class="link">
                             <div class="section-portfolio-wrapper">
                                 <img src="./images/img-09.png" alt="Работа за ноутбуком" width="370">
