--- a/index.html
+++ b/index.html
@@ -331,30 +331,30 @@
                 <div class="footer-social-icon">
                     <h3 class="footer-title title">присоединяйтесь</h3>
                     <ul class="footer-list-icon list">
-                        <li class="social-list_item">
-                            <a href="" class="social-list_link footer-link link">
-                                <svg class="social-list_icon footer-icon">
+                        <li class="social-list__item">
+                            <a href="" class="social-list__link footer-link link">
+                                <svg class="social-list__icon footer-icon">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list_item">
-                            <a href="" class="social-list_link footer-link link">
-                                <svg class="social-list_icon footer-icon">
+                        <li class="social-list__item">
+                            <a href="" class="social-list__link footer-link link">
+                                <svg class="social-list__icon footer-icon">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list_item">
-                            <a href="" class="social-list_link footer-link link">
-                                <svg class="social-list_icon footer-icon">
+                        <li class="social-list__item">
+                            <a href="" class="social-list__link footer-link link">
+                                <svg class="social-list__icon footer-icon">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list_item">
-                            <a href="" class="social-list_link footer-link link">
-                                <svg class="social-list_icon footer-icon">
+                        <li class="social-list__item">
+                            <a href="" class="social-list__link footer-link link">
+                                <svg class="social-list__icon footer-icon">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
